varnish/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
        - name: varnish
          image: varnish:7.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: varnish-config
              mountPath: /etc/varnish/default.vcl
              subPath: default.vcl
      volumes:
        - name: varnish-config
          configMap:
            name: varnish-config
