varnish/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varnish
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: varnish
