varnish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varnish-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hola-varnish.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: varnish
                port:
                  number: 80
